# isod

./: Cargo.toml
src/: cli.rs  config.rs  main.rs  usb.rs
src/download/: checksum.rs
src/handlers/: add.rs  clean.rs  config.rs  download.rs  info.rs  list.rs  mod.rs  remove.rs  search.rs  sync.rs  update.rs
src/registry/: mod.rs  version_detection.rs
src/registry/distros/: arch.rs  debian.rs  fedora.rs  ubuntu.rs
tests/: integration_test.rs
