[package]
name = "isod"
version = "0.1.0"
edition = "2024"
authors = ["AirOne01 <21955960+AirOne01@users.noreply.github.com>"]
description = "Bootable ISOs manager"
repository = "https://github.com/airone01/isod"
homepage = "https://github.com/airone01/isod"
license = "MIT"
readme = "README.md"
keywords = ["cli", "rust"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive"] }
console = "0.16.0"
dialoguer = "0.11.0"
directories = "6.0.0"
indicatif = "0.17.11"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
usbenum = "0.1.0"
walkdir = "2.5.0"
